--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h1{
     display: flex;
     flex-direction: column;
 }
-.hero-left, p{
+.hero-left p{
     font-size: 18px;
     color: #E5E7EB;
 }
@@ -61,4 +61,31 @@ h1{
     border-radius: 25px;
     width: 100px;
     height:21px
+}
+.second-page{
+    background-color: #e0e0e0;
+    padding: 20px;
+}
+.second-container{
+    display: flex;
+    flex-direction: column;
+    max-width: 900px;
+    height: auto;
+    margin: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.second-content ul{
+    display: flex;
+    gap: 10px;
+    list-style: none;
+    
+}
+.second-content img{
+    width: 150px;
+    height: 150px;
+}
+.second-content p{
+    text-align: center;
 }
